--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,28 @@
   </head>
 
   <body>
-   <header class="main">
- <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
- <h1><%= @page_title %></h1>
- </header>
- <section class="content">
- <nav class="side_nav">
- <ul>
- <li><a href="/">Home</a></li>
- <li><a href="/questions">Questions</a></li>
- <li><a href="/news">News</a></li>
- <li><a href="/contact">Contact</a></li>
- <li style="color: white;"><%= Time.now.localtime %></li>
- </ul>
- </nav>
-    <main class='<%= controller.controller_name %>'>
-       <%= yield %>
-    </main>
- </section>
-
+    <header class="main">
+      <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
+      <h1><%= @page_title %></h1>
+    </header>
+    <section class="content">
+      <nav class="side_nav">
+        <% if @cart %>
+          <div id="cart" class="carts">
+            <%= render @cart %>
+          </div>
+        <% end %>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/questions">Questions</a></li>
+          <li><a href="/news">News</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li style="color: white;"><%= Time.now.localtime %></li>
+        </ul>
+      </nav>
+        <main class='<%= controller.controller_name %>'>
+          <%= yield %>
+        </main>
+    </section>
   </body>
 </html>
